--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -116,7 +116,7 @@ Increase in microclimatic temperatures as a consequence of macroclimate warming 
 
 (Marielle--"Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions (Stark et al. 2020)".) 
 
-With such changing in forest dynamics, it is becoming more important than ever to understand thermal sensitivity of forests along the vertical canopy profile, from the understory to the top of the canopy, this will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
+With such changing in forest dynamics, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy, this will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
 
 
 (@niinemetsWithincanopyVariationRate2004a highlights how biophysical and photosynthetic gradient varies along the vertical canopy profile, however our current knowledge of this topic is lacking.)
@@ -164,7 +164,7 @@ In this review, we focus primarily on growing season conditions, including leaf 
 Light conditions, specifically photosynthetically active radiation (PAR) varies along the vertical gradient with canopy height, canopy structure and across species [@koike_leaf_2001] due to cumulative layers of vegetation. Generally, upper canopies are more exposed to irradiance and limit light to canopy interiors, lower canopy layers and understories [@fauset_differences_2018; @niinemetsPackingPhotosyntheticMachinery2009; Parker 1995; @poorterMetaanalysisPlantResponses2019b]
 (Fig. `r fig_NEON_vertical`).
 In heterogeneous canopies [with high gap fractions], distance from the outer canopy is a better proxy for light environment than height (Parker 1995) and lower canopy light environments are highly variable, ranging from high light gap to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. 
- Tropical forests with dense overstory limit light to understories and subsequent layers, where tropical forest floors receive approximately 1-2%  of the light incident to the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and Northern temperate forest floors receive around 4-5% of full sunlight [Bartemucci et al. 2005]
+ Tropical forests with dense overstory limit light to understories and subsequent layers, where tropical forest floors receive approximately 1-2%  of the light incident to the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and Northern temperate forest floors receive around 4-5% of full sunlight [Bartemucci et al. 2005].
 This difference in light regime along a vertical profile is an important driver of plasticity among leaf traits, leaf physiology, adaptation, and thermal sensitivity along the gradient [@michaletzEnergeticCarbonEconomic2016; @fausetDifferencesLeafThermoregulation2018; @niinemetsResponsesForestTrees2010, @sackHowStrongIntracanopy2006; @doughtyAreTropicalForests2008].Upper canopy leaves adapted to high irradiance have different leaf traits and thermal sensitivity strategies compared to leaves in deeply shaded understory, canopy interiors, and in canopy gaps. This is discussed further below under Leaf Traits.
 
 -	Sunflecks: Leaky et al. 2003--from Marielle, "This is another, higher resolution axis of the variability of microenvironments that is probably quite important to address. (Also see the papers by Robin Chazdon on temporal variability of light environments). Maybe we will want to add these sentences (above) and something about sunflecks to a separate section that specifically addresses sources of variation in forest structure & microenvironments (e.g., vertical, horizontal, seasonal, diurnal, and with disturbance)?"
@@ -172,7 +172,7 @@ This difference in light regime along a vertical profile is an important driver 
 **Wind speeds are also higher at the top of the canopy (Fig. `r fig_NEON_vertical`).**
 *(fill in some specifics from the NEON analysis)*
 Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [Barnard and Bauerle, 2016; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019].
-This results in higher boundary layer conductance ($g_{a}$) for canopy leaves. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$ [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; stocks et al. 2006]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata.
+This results in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with increase in wind velocity [Daudet et al. 1999]. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$, this is typical of canopy leaves with small leaf sizes making them more advantageous in dissapating heat efficiently [Bauerle et al. 2011]. However, because $g_{a}$ to heat transfer is small enough, $T_{leaf}$ in upper canopy can become substantially elevated than $T_{air}$ under high radiation and low wind conditions [@martin_boundary_1999]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; Stockes et al. 2006]. Boundary layer thickness, depth and boundary layer resistance increases with leaf size and effective leaf width, such that the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, therefore allowing small leaves to dissapate heat more efficiently than large leaves [@leighInfluenceLeafSize2017].
 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012] and in the northwestern United States [@davis_microclimatic_2019]. 
@@ -198,7 +198,9 @@ This means that canopy leaves tend to be exposed to higher *evaporative demand*,
 -	Higher in the understory overnight; difference persists during the day but is very small [@yang_spatial_1999].
 - Differences in concentration are by far most pronounced near ground level, as well, concentrations of (CO~2~) mole fraction values have been observed to be higher in lower canopy leaves compared with upper canopy leaves [@niinemetsPhotosyntheticAcclimationSimultaneous2004a]
 
-Given that differences are small during the day when photosynthesis is active, and that even nighttime differences are modest at the height of understory tree crowns, CO~2~ concentration is unlikely to have much effect on the energy balance and metabolism of leaves across the forest vertical gradient."If soil and stem respiration do not acclimate fully to rising temperatures, the greater amount of CO2 emitted at the forest floor could increase the vertical CO2 gradient in the future, but this would still only be a short-term effect in the early morning, as the CO2 would quickly diffuse through the canopy. Furthermore, increases in mortality of big trees (e.g. Senf et al. 2018) would increase canopy roughness and prevent build-up of CO2 concentration gradients."- MS 
+Given that differences are small during the day when photosynthesis is active, and that even nighttime differences are modest at the height of understory tree crowns, CO~2~ concentration is unlikely to have much effect on the energy balance and metabolism of leaves across the forest vertical gradient.
+
+If soil and stem respiration do not acclimate fully to rising temperatures, the greater amount of CO2 emitted at the forest floor could increase the vertical CO2 gradient in the future, but this would still only be a short-term effect in the early morning, as the CO2 would quickly diffuse through the canopy. Furthermore, increases in mortality of big trees (e.g. Senf et al. 2018) would increase canopy roughness and prevent build-up of CO2 concentration gradients.
 
 
 
@@ -275,6 +277,7 @@ Schuepp 1993; Sack et al. 2006].
 -	Michaeletz has used this in theoretical calculations (Michaeletz et al. 2016 and 2015?
 I have Michaletz's code to calculate the thermal time constant, so if there are data, or general tendencies for changes in leaf area, LMA, leaf width and leaf dry matter content we can determine how these trends would translate into changes in thermal time constant. 
 In practice, an important driver seems to be leaf water content per unit area (I think Lawren might have mentioned this as well in our meeting), so if we can conclude that that is something that scales with the vertical gradient, then we can make an informed guess about how the thermal time constant will change--Martijn Slot
+-Effective leaf width defined as the largest circle that can be inscribed in a leaf is an effective predictor of leaf thermal time constant and leaf boundary layer thickness. Large leaves have greater effective leaf width which increases their thermal time constant by prolonging leaf cooling time compared to small leaves that have a smaller effective leaf width, and thus small thermal time constant with shorter cooling time. Increased leaf width typical in larger leaves was also observed to increase leaf to air temperature difference. [@leighInfluenceLeafSize2017]   
 
 
 *Carotinoids/Xanthophyll cycle pigments* 
