--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -102,22 +102,22 @@ In the meantime, our findings imply that while large canopy trees are the most v
 ## Introduction
 
 Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC REF). 
-There is also increasing severity and frequency of heat waves [@perkinsIncreasingFrequencyIntensity2012].
+There is also increasing severity and frequency of heat waves that may potentially reduce [forest] biomass acculumation and disrupt photosynthesis and metabolic processes across plant species [O'Sullivan;REF ;@perkinsIncreasingFrequencyIntensity2012].
 These changes are expected to have profound effects on forest biodiversity and ecosystem function (REFS), and the resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will have a critical influence on the future of trajectory of climate change [@bonan_ecological_2016, Bonan 2008].
-
-Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in regulating macro-microclimate [@nakamuraForestsTheirCanopies2017; @ozanneBiodiversityMeetsAtmosphere2003] by buffering extreme temperatures along with other macroclimatic conditions in the understory.
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davis_microclimatic_2019].**
 
-The structure of canopies and understories are changing due to unprecedented disturbance rates thus having feedbacks to forest structure and climate change.
-The capacity of buffering largly depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestaion, fire and related disruptions, which may contribute to increasing tree mortality in forests around the world [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015].With increasing temperatures, temperate and tropical forest canopies will be soon or are already functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, larger trees suffer more during drought [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. The increase in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] is also associated with reductions in canopy structural complexity, and altered microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
+Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@nakamuraForestsTheirCanopies2017; @ozanneBiodiversityMeetsAtmosphere2003] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environments which influences leaf temperature and metabolism along the gradient.[ref]
 
-Increase in microclimatic temperatures as a consequence of macroclimate warming is causing thermophilization in plant communities, reshuffling of species acclimated to cooler [mean annual] temperatures in the understory [@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]and reduced tree growth rates, driving a global trend towards disquillibrium in forests with younger trees [@mcdowellMechanismsPlantSurvival2008] with potential feedbacks to climate change.
+The capacity of buffering largly depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions.
+Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests. Larger trees suffer more during drought, which may contribute to increasing tree mortality in forests around the world [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a; @mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
 
-(Marielle--"Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions (Stark et al. 2020)".) 
+While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. This is leading to thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. 
+Microclimate warming has implications for forest regeneration[@von et al.] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellMechanismsPlantSurvival2008].
+Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions (Stark et al. 2020). Each of these changes have potential feedbacks to climate change.
 
-With such changing in forest dynamics, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy, this will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
 
+With such changing forest dynamics, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy influenced by biophysical environmental gradient.This will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
 
 (@niinemetsWithincanopyVariationRate2004a highlights how biophysical and photosynthetic gradient varies along the vertical canopy profile, however our current knowledge of this topic is lacking.)
 
@@ -161,28 +161,34 @@ The vertical structure and hence, microenvironments of forest canopies vary seas
 In this review, we focus primarily on growing season conditions, including leaf phenology at the edges of the growing season but excluding periods (in deciduous forests) when no leaves are present.
 
 
-Light conditions, specifically photosynthetically active radiation (PAR) varies along the vertical gradient with canopy height, canopy structure and across species [@koike_leaf_2001] due to cumulative layers of vegetation. Generally, upper canopies are more exposed to irradiance and limit light to canopy interiors, lower canopy layers and understories [@fauset_differences_2018; @niinemetsPackingPhotosyntheticMachinery2009; Parker 1995; @poorterMetaanalysisPlantResponses2019b]
+Light conditions, specifically photosynthetically active radiation (PAR) varies along the vertical gradient with canopy height, canopy structure, across species and forests [@koike_leaf_2001] due to cumulative layers of vegetation. Generally, upper canopies are more exposed to irradiance and limit light through shading to canopy interiors, lower canopy layers and understories [@fauset_differences_2018; @niinemetsPackingPhotosyntheticMachinery2009; Parker 1995; @poorterMetaanalysisPlantResponses2019b]
 (Fig. `r fig_NEON_vertical`).
 In heterogeneous canopies [with high gap fractions], distance from the outer canopy is a better proxy for light environment than height (Parker 1995) and lower canopy light environments are highly variable, ranging from high light gap to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. 
  Tropical forests with dense overstory limit light to understories and subsequent layers, where tropical forest floors receive approximately 1-2%  of the light incident to the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and Northern temperate forest floors receive around 4-5% of full sunlight [Bartemucci et al. 2005].
-This difference in light regime along a vertical profile is an important driver of plasticity among leaf traits, leaf physiology, adaptation, and thermal sensitivity along the gradient [@michaletzEnergeticCarbonEconomic2016; @fausetDifferencesLeafThermoregulation2018; @niinemetsResponsesForestTrees2010, @sackHowStrongIntracanopy2006; @doughtyAreTropicalForests2008].Upper canopy leaves adapted to high irradiance have different leaf traits and thermal sensitivity strategies compared to leaves in deeply shaded understory, canopy interiors, and in canopy gaps. This is discussed further below under Leaf Traits.
+This difference in light regime along a vertical profile is an important driver of plasticity in leaf traits, leaf physiology, adaptation, and thermal sensitivity along the gradient [@michaletzEnergeticCarbonEconomic2016; @fausetDifferencesLeafThermoregulation2018; @niinemetsResponsesForestTrees2010, @sackHowStrongIntracanopy2006; @doughtyAreTropicalForests2008].
 
 -	Sunflecks: Leaky et al. 2003--from Marielle, "This is another, higher resolution axis of the variability of microenvironments that is probably quite important to address. (Also see the papers by Robin Chazdon on temporal variability of light environments). Maybe we will want to add these sentences (above) and something about sunflecks to a separate section that specifically addresses sources of variation in forest structure & microenvironments (e.g., vertical, horizontal, seasonal, diurnal, and with disturbance)?"
 
 **Wind speeds are also higher at the top of the canopy (Fig. `r fig_NEON_vertical`).**
 *(fill in some specifics from the NEON analysis)*
-Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [Barnard and Bauerle, 2016; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019].
-This results in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with increase in wind velocity [Daudet et al. 1999]. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$, this is typical of canopy leaves with small leaf sizes making them more advantageous in dissapating heat efficiently [Bauerle et al. 2011]. However, because $g_{a}$ to heat transfer is small enough, $T_{leaf}$ in upper canopy can become substantially elevated than $T_{air}$ under high radiation and low wind conditions [@martin_boundary_1999]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; Stockes et al. 2006]. Boundary layer thickness, depth and boundary layer resistance increases with leaf size and effective leaf width, such that the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, therefore allowing small leaves to dissapate heat more efficiently than large leaves [@leighInfluenceLeafSize2017].
+Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [Barnard and Bauerle, 2016; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019] in summer months. Wind speed in dry season of semi-deciduous forests at upper canopy has been observed to be higher than in upper canopy wet season [@rey-sanchez_spatial_2016].[*double check*] 
+This results in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with increase in wind velocity [Daudet et al. 1999]. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$, this is more typical of canopy leaves with small leaf sizes making them more advantageous in dissapating heat efficiently [Bauerle et al. 2011]. In low wind conditions, because $g_{a}$ to heat transfer is small enough, $T_{leaf}$ in upper canopy can become substantially elevated than $T_{air}$ under high radiation [@martin_boundary_1999]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; Stockes et al. 2006]. Boundary layer thickness, depth and boundary layer resistance increases with leaf size and effective leaf width [along the vertical gradient], such that the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, therefore allowing small leaves to dissapate heat more efficiently than large leaves [@leighInfluenceLeafSize2017].
 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
-Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012] and in the northwestern United States [@davis_microclimatic_2019]. 
-Similarly, maximum air temperatures were higher above than below tropical forest canopies during wet seasons in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018, Tymen et al. 2017]. 
-"max temps were higher and humidity lower in gaps vs understory regions (both at 1.5 m above the ground), see Fig. 4 - again illustrating buffering effect of the canopy".
-However, similar maximum temperatures have been observed during the dry season a semi-deciduous forest in Panama [@rey-sanchez_spatial_2016] and in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
-Minimum $T_{air}$ is also buffered by forest canopies under some conditions. (Martijn: I think this may have been important; in the dry season some canopy trees were leafless, resulting in more light reaching the sub-canopy, and more air movement between subcanopy and above-canopy air)
+Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [De Frenne et al. 2019], and increasing recent evidence of similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012] and in the northwestern United States [@davis_microclimatic_2019]. 
+
+Moderating capacity of under forest microclimate differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests moderate daytime microclimate more than pine and boreal forests [De Frenne et al. 2019; @vonarxSpatiotemporalEffectsForest2012]
+
+Similarly, maximum air temperatures were higher above than below tropical forest canopies during wet seasons in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012] and coastal Brazil [@fauset_differences_2018, Tymen et al. 2017].
+
+"max temps were higher and humidity lower in gaps vs understory regions (both at 1.5 m above the ground), see Fig. 4 - again illustrating buffering effect of the canopy".However, similar maximum temperatures have been observed during the dry season of a semi-deciduous tropical forest in Panama partially because in the dry season some canopy trees were leafless, resulting in more light reaching the sub-canopy, and more air movement between subcanopy and above-canopy air[@rey-sanchez_spatial_2016] and in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
+
+Minimum $T_{air}$ is also buffered by forest canopies under some conditions.
 Higher minimum temperatures under forest canopies relative to nearby clearings have been observed across Europe [@zellweger_seasonal_2019] and in the northwestern United States [@davis_microclimatic_2019].(Martijn: should we refer to mechanisms at this point? (e.g., greater radiative heat loss in exposed areas resulting in lower Tmin))
 However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
+
 *(Add something about risk of freeze.)* 
+
 
 **Humidity also varies across the forest vertical profile, being generally higher in the understory (Fig. `r fig_NEON_vertical`).**
 - DETAILS - REFS
