--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -107,13 +107,13 @@ These changes are expected to have profound effects on forest biodiversity and e
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davis_microclimatic_2019].**
 
-Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@nakamuraForestsTheirCanopies2017; @ozanneBiodiversityMeetsAtmosphere2003] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environments which influences leaf temperature and metabolism along the gradient.[ref]
+Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@nakamuraForestsTheirCanopies2017; @ozanneBiodiversityMeetsAtmosphere2003] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environments such as temperature, light, wind, humidity and Co2 which influences leaf temperature and metabolism along the gradient.[Bertrand et al. 2011]
 
 The capacity of buffering largly depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions.
 Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests. Larger trees suffer more during drought, which may contribute to increasing tree mortality in forests around the world [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a; @mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
 
-While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. This is leading to thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. 
-Microclimate warming has implications for forest regeneration[@von et al.] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellMechanismsPlantSurvival2008].
+While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. Temperature is directly linked with plant metabolic processes and growth, thus even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011] This is leading to thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. 
+Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellMechanismsPlantSurvival2008].
 Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions (Stark et al. 2020). Each of these changes have potential feedbacks to climate change.
 
 
@@ -171,21 +171,23 @@ This difference in light regime along a vertical profile is an important driver 
 
 **Wind speeds are also higher at the top of the canopy (Fig. `r fig_NEON_vertical`).**
 *(fill in some specifics from the NEON analysis)*
-Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [Barnard and Bauerle, 2016; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019] in summer months. Wind speed in dry season of semi-deciduous forests at upper canopy has been observed to be higher than in upper canopy wet season [@rey-sanchez_spatial_2016].[*double check*] 
+Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [Barnard and Bauerle, 2016; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019] in summer months. Wind speed in dry season of a semi-deciduous forests at upper canopy has been observed to be higher than in upper canopy wet season [@rey-sanchez_spatial_2016].[*double check*] 
 This results in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with increase in wind velocity [Daudet et al. 1999]. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$, this is more typical of canopy leaves with small leaf sizes making them more advantageous in dissapating heat efficiently [Bauerle et al. 2011]. In low wind conditions, because $g_{a}$ to heat transfer is small enough, $T_{leaf}$ in upper canopy can become substantially elevated than $T_{air}$ under high radiation [@martin_boundary_1999]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; Stockes et al. 2006]. Boundary layer thickness, depth and boundary layer resistance increases with leaf size and effective leaf width [along the vertical gradient], such that the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, therefore allowing small leaves to dissapate heat more efficiently than large leaves [@leighInfluenceLeafSize2017].
 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
-Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [De Frenne et al. 2019], and increasing recent evidence of similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012] and in the northwestern United States [@davis_microclimatic_2019]. 
+Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [De Frenne et al. 2019], and recent evidence shows of a similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012] and in the northwestern United States [@davis_microclimatic_2019]. 
 
-Moderating capacity of under forest microclimate differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests moderate daytime microclimate more than pine and boreal forests [De Frenne et al. 2019; @vonarxSpatiotemporalEffectsForest2012]
+Moderating capacity of under forest microclimate differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures more than pine and boreal forests [De Frenne et al. 2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reveresed during the night, with pine forests maintaing warmer below canopy temperature than above [@vonarxSpatiotemporalEffectsForest2012a] 
 
 Similarly, maximum air temperatures were higher above than below tropical forest canopies during wet seasons in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012] and coastal Brazil [@fauset_differences_2018, Tymen et al. 2017].
 
-"max temps were higher and humidity lower in gaps vs understory regions (both at 1.5 m above the ground), see Fig. 4 - again illustrating buffering effect of the canopy".However, similar maximum temperatures have been observed during the dry season of a semi-deciduous tropical forest in Panama partially because in the dry season some canopy trees were leafless, resulting in more light reaching the sub-canopy, and more air movement between subcanopy and above-canopy air[@rey-sanchez_spatial_2016] and in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
+"max temps were higher and humidity lower in gaps vs understory regions (both at 1.5 m above the ground), see Fig. 4 - again illustrating buffering effect of the canopy".However, similar maximum temperatures have been observed during the dry season of a semi-deciduous tropical forest in Panama partially because in the dry season some canopy trees were leafless, resulting in more light reaching the sub-canopy, and more air movement between subcanopy and above-canopy air[@rey-sanchez_spatial_2016], similar results were observed in in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
 Minimum $T_{air}$ is also buffered by forest canopies under some conditions.
 Higher minimum temperatures under forest canopies relative to nearby clearings have been observed across Europe [@zellweger_seasonal_2019] and in the northwestern United States [@davis_microclimatic_2019].(Martijn: should we refer to mechanisms at this point? (e.g., greater radiative heat loss in exposed areas resulting in lower Tmin))
 However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
+
+[Add something about canopy temperature is a better proxy for determining leaf temperature than air temperature; in wet season leaf temperature can be linked to intensity of irradiance and air temperature, however, in dry season, air temperature better determines leaf temperature due to general increase in irradiance intensity and mixing of air movement along the gradient caused by fewer leaves [rey sanchez et al]]
 
 *(Add something about risk of freeze.)* 
 
@@ -194,7 +196,9 @@ However, similar minimum temperatures under forest canopies have been observed i
 - DETAILS - REFS
 - @mcgregor_tree_nodate
 
-Forest canopies moderate relative humidity in below-canopy microclimates along with temperature. In three European forest types (Broadleaved, Non-Pine Conifer, Pine) canopy buffering was observed to decrease daily maximum $T_{air}$ and increase daily minimum RH in below-canopy microclimate. With rising temperatures, this trend in maximum $T_{air}$ and RH would have implications on understory seedling growth, especially in high altitude temperate pine forests and montane forests  [@vonarxSpatiotemporalEffectsForest2012, @fauset_differences_2018] (to clarify why? are these high elevation forests limited by low temperature and low rh?) 
+Along with temperature, forest canopies moderate relative humidity in below-canopy microclimates. In three European forest types (Broadleaved, Non-Pine Conifer, Pine) canopy buffering decreased daily maximum $T_{air}$ and increased daily minimum RH in below-canopy microclimate compared to a nearby open area. Moderating capacity was stronger under broadleaved and non-pine conifer forests than pine, and greater in wetter conditions, and in summer and autumn months than winter. Dry months showed less drastic minimum RH changes in below vs upper canopy  [@vonarxSpatiotemporalEffectsForest2012a]. 
+
+With rising temperatures, this trend in maximum $T_{air}$ and RH would have implications for understory seedling growth, especially in high altitude temperate pine forests and montane forests  [@vonarxSpatiotemporalEffectsForest2012a, @fauset_differences_2018] (to clarify why? are these high elevation forests limited by low temperature and low rh?)  
 
 RH, in combination with temperature, determines vapor pressure deficit, $VPD$. Atlantic forests during wet season tended to have higher $T_{air}$, and $VPD$ in upper canopy and canopy gaps than lower in understory where $T_{air}$ and $VPD$ were lower [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017].
 This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomtal contrains and lower osmotic potential. [@niinemetsPhotosyntheticAcclimationSimultaneous2004a]
